test/files/neg/sip23-no-null-type.scala
object Test {
  val nada: null.type = null
}
